fix typo and remove obsolete parameter

--- a/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-config.provisioning.hbs
+++ b/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-config.provisioning.hbs
@@ -21,7 +21,7 @@
   # Set loglevel for project-specific bundles
   org.apache.sling.commons.log.LogManager.factory.config-wcmio-samples
     org.apache.sling.commons.log.file="logs/error.log"
-    org.apache.sling.commons.log.level="{{log.projectSpecifcLogLevel}}"
+    org.apache.sling.commons.log.level="{{log.projectSpecificLogLevel}}"
     org.apache.sling.commons.log.names=["io.wcm"]
     org.apache.sling.commons.log.pattern="{0,date,dd.MM.yyyy\ HH:mm:ss.SSS}\ *{4}*\ [{2}]\ {3}\ {5}"
   
