--- a/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-config.provisioning.hbs
+++ b/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-config.provisioning.hbs
@@ -25,22 +25,29 @@
     org.apache.sling.commons.log.names=["io.wcm"]
     org.apache.sling.commons.log.pattern="{0,date,dd.MM.yyyy\ HH:mm:ss.SSS}\ *{4}*\ [{2}]\ {3}\ {5}"
   
-  # Configure wcm.io Configuration Persistence
-  io.wcm.config.core.persistence.impl.ToolsConfigPagePersistenceProvider
-    configPageTemplate="/apps/wcm-io-samples/handler-sample-app/templates/admin/configEditor"
-    structurePageTemplate="/apps/wcm-io-samples/handler-sample-app/templates/framework/structureElement"
+  # Context path strategy
+  io.wcm.caconfig.extensions.contextpath.impl.RootTemplateContextPathStrategy-wcmio-samples
+    templatePaths=["/apps/wcm-io-samples/sample-app/templates/content/homepage"]
+    minLevel=I"1"
+    maxLevel=I"5"
+    contextPathRegex="^/content(/.+)$"
+    configPathPatterns=["/conf$1","/content$1/tools/config/jcr:content"]
+
+  # Store configuration in tools/config pages
+  io.wcm.caconfig.extensions.persistence.impl.ToolsConfigPagePersistenceStrategy
     enabled=B"true"
+    configPageTemplate="/apps/wcm-io-samples/sample-app/templates/admin/configEditor"
+    structurePageTemplate="/apps/wcm-io-samples/sample-app/templates/admin/structureElement"
 
-
-# Override site configuration
 {{#if configOverrides}}
-  io.wcm.config.core.override.impl.OsgiConfigOverrideProvider-override
+  # Override site configuration
+  org.apache.sling.caconfig.impl.override.OsgiConfigurationOverrideProvider-override
     enabled=B"true"
     description="Site URL Config Overrides"
     overrides=[
       {{~#each configOverrides ~}}
         {{~#each this ~}}
-          "[{{../@key}}]{{@key}}\={{this}}",
+          "[{{../@key}}]{{this}}",
         {{~/each ~}}
       {{~/each ~}}
     ]
