Fix ACLs for DAM system user.

--- a/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-author-systemusers.json.hbs
+++ b/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-author-systemusers.json.hbs
@@ -15,7 +15,7 @@
         "allow-wcmioDamSystemUser": {
           "jcr:primaryType": "rep:GrantACE",
           "rep:principalName": "wcmioDamSystemUser",
-          "rep:privileges": [ "rep:write", "crx:replicate" ]
+          "rep:privileges": [ "jcr:read", "rep:write", "crx:replicate" ]
         }
       }
 
