--- a/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-config.provisioning.hbs
+++ b/definition/src/main/templates/wcm-io-samples-aem-cms/wcm-io-samples-aem-cms-config.provisioning.hbs
@@ -1,47 +1,33 @@
-[feature name=wcm-io-samplesaem-cms-config]
+[feature name=wcm-io-samples-aem-cms-config]
 
 
 [configurations]
 
-  # Default LogManager configuration
-  org.apache.sling.commons.log.LogManager
-    org.apache.sling.commons.log.pattern="{0,date,dd.MM.yyyy\ HH:mm:ss.SSS}\ *{4}*\ [{2}]\ {3}\ {5}"
-    org.apache.sling.commons.log.file="logs/error.log"
-    org.apache.sling.commons.log.level="warn"
-    org.apache.sling.commons.log.file.size="'.'yyyy-MM-dd"
-    org.apache.sling.commons.log.file.number=I"15"
-
   # Set loglevel for project-specific bundles
-  org.apache.sling.commons.log.LogManager.factory.config-wcmio-samples
+  org.apache.sling.commons.log.LogManager.factory.config-wcm-io-samples
     org.apache.sling.commons.log.file="logs/error.log"
     org.apache.sling.commons.log.level="{{log.projectSpecificLogLevel}}"
     org.apache.sling.commons.log.names=["io.wcm"]
-    org.apache.sling.commons.log.pattern="{0,date,dd.MM.yyyy\ HH:mm:ss.SSS}\ *{4}*\ [{2}]\ {3}\ {5}"
-  
-  # Update CAConfig config on AEM 6.3
-  org.apache.sling.caconfig.resource.impl.def.DefaultConfigurationResourceResolvingStrategy
-    fallbackPaths=["/conf/global","/apps","/libs"]
-    configCollectionInheritancePropertyNames=["jcr:content/sling:configCollectionInherit", "jcr:content/mergeList","mergeList"]
-
-  org.apache.sling.caconfig.management.impl.ConfigurationManagementSettingsImpl
-    ignorePropertyNameRegex=["^(jcr|cq):.+$"]
-    configCollectionPropertiesResourceNames=["jcr:content","."]
 
   # Context path strategy
-  io.wcm.caconfig.extensions.contextpath.impl.RootTemplateContextPathStrategy-wcmio-samples
-    templatePaths=["/apps/wcm-io-samples/sample-app/templates/content/homepage"]
+  io.wcm.caconfig.extensions.contextpath.impl.RootTemplateContextPathStrategy-wcm-io-samples
+    templatePaths=["/apps/wcm-io-samples/core/templates/content/homepage"]
     minLevel=I"1"
     maxLevel=I"5"
-    contextPathRegex="^/content(/.+)$"
-    configPathPatterns=["/conf$1","/content$1/tools/config/jcr:content"]
+    contextPathRegex="^/content/(dam/)?(wcm-io-samples/.*)?$"
+    configPathPatterns=["/conf/$2"]
 
   # Store configuration in tools/config pages
-  io.wcm.caconfig.extensions.persistence.impl.ToolsConfigPagePersistenceStrategy
+  io.wcm.caconfig.extensions.persistence.impl.PagePersistenceStrategy
     enabled=B"true"
-    configPageTemplate="/apps/wcm-io-samples/sample-app/templates/admin/configEditor"
-    structurePageTemplate="/apps/wcm-io-samples/sample-app/templates/admin/structureElement"
 
+  # Service user mapping for wcm.io URL handler
+  org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-samples-wcmio-handler-wcm
+    user.mapping=["io.wcm.handler.url:clientlibs-service\=[sling-scripting]","io.wcm.wcm.commons:component-properties\=[sling-scripting]"]
 
+  # Service user mapping for wcm.io Media Handler
+  org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-samples-wcmio-handler-media-dynamicmedia
+    user.mapping=["io.wcm.handler.media:dynamic-media-support\=[configuration-reader-service]"]
 
 [configurations runModes=author]
 
@@ -49,33 +35,36 @@
   com.day.cq.commons.servlets.RootMappingServlet
     rootmapping.target="/sites.html"
 
-  # Define service user for wcm.io Media Handler
-  org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-wcmio-samples
-    user.mapping=["io.wcm.handler.media\=wcmioDamSystemUser"]
+  # Instance type
+  io.wcm.wcm.commons.instancetype.impl.InstanceTypeServiceImpl
+    instance.type="author"
+
+  # Service user mapping for wcm.io Media Handler
+  org.apache.sling.serviceusermapping.impl.ServiceUserMapperImpl.amended-samples-wcmio-handler-media-metadata
+    user.mapping=["io.wcm.handler.media:dam-rendition-metadata\=[dam-writer-service]"]
 
   # Configure Responsive Preview Mode
-  io.wcm.wcm.ui.granite.emulator.impl.EmulatorProviderImpl-wcmio-samples
-    templatePathPatterns=["^/apps/wcm-io-samples/sample-app/.*$"]
-
+  io.wcm.wcm.ui.granite.emulator.impl.EmulatorProviderImpl-wcm-io-samples
+    templatePathPatterns=["^/apps/wcm-io-samples/core/.*$"]
 
 
 [configurations runModes=publish]
-  
-  # Disable built-in JSON and XML access features for resources
+
+  # Disable Configuration Editor on publish
+  io.wcm.caconfig.editor.impl.EditorConfig
+    enabled=B"false"
+
+  # Disable default renderings for Sling GET servlet on publish
   org.apache.sling.servlets.get.DefaultGetServlet
     enable.html=B"false"
-    enable.json=B"false"
+    enable.json=B"true"
     enable.txt=B"false"
     enable.xml=B"false"
     index=B"false"
     index.files=["index","index.html"]
     aliases="xml:pdf"
-    json.maximumresults=I"1000"
+    json.maximumresults=I"100"
 
-
-[:repoinit runModes=author]
-# Create service user for wcm.io Media Handler
-create service user wcmioDamSystemUser
-set ACL on /content/dam
-  allow jcr:read,rep:write for wcmioDamSystemUser
-end
+  # Instance type
+  io.wcm.wcm.commons.instancetype.impl.InstanceTypeServiceImpl
+    instance.type="publish"
